# JniTeapot

./: .gitattributes  .gitignore  Commit-Message.md  Home.md  LICENSE.txt  README.md  _Footer.md
ARGraphics/: .gitignore  build.gradle
ARGraphics/app/: CMakeLists.txt  build.gradle
ARGraphics/app/src/androidTest/java/umich/argraphics/: ExampleInstrumentedTest.kt
ARGraphics/app/src/main/: AndroidManifest.xml
ARGraphics/app/src/main/assets/shaders/: ar_object.frag  ar_object.vert  screenquad.frag  screenquad.vert
ARGraphics/app/src/main/cpp/: FileManager.h  GlContext.h  GlText.h  Memory.h  Rectangle.h  argraphics.cpp  argraphics.h  background_renderer.cpp  background_renderer.h  customAssert.h  jniTeapotUtil.h  jni_interface.cpp  jni_interface.h  log.h  sphere_renderer.cpp  sphere_renderer.h  texture.cpp  texture.h  util.cpp  util.h  vec.h
ARGraphics/app/src/main/cpp/FreeType2.9/: CMakeLists.txt
ARGraphics/app/src/main/cpp/FreeType2.9/src/autofit/: aflatin2.c
ARGraphics/app/src/main/cpp/FreeType2.9/src/bdf/: bdflib.c
ARGraphics/app/src/main/cpp/FreeType2.9/src/pfr/: pfrsbit.c
ARGraphics/app/src/main/cpp/FreeType2.9/src/truetype/: ttobjs.c
ARGraphics/app/src/main/java/umich/argraphics/: CameraPermissionHelper.kt  JniInterface.kt  MainActivity.kt
ARGraphics/app/src/main/res/layout/: activity_main.xml
ARGraphics/app/src/main/res/values/: strings.xml
ARGraphics/app/src/test/java/umich/argraphics/: ExampleUnitTest.kt
JniTeapot/: .gitignore  README.md  TODO.txt  build.gradle  code.cmd  settings.gradle
JniTeapot/app/: build.gradle
JniTeapot/app/src/main/: AndroidManifest.xml
JniTeapot/app/src/main/assets/shaders/: ar_object.frag  ar_object.vert  debug_texture.frag  debug_texture.vert  light.frag  light.vert  object.frag  object.vert  plane.frag  plane.vert  point_cloud.vert  screenquad.frag  screenquad.vert  simple_shadow.vert
JniTeapot/app/src/main/cpp/: ARWrapper.h  ArPlanes.h  CMakeLists.txt  Camera.h  Cuboid.h  FBO.h  FileManager.h  Ft.h  GlCamera.h  GlContext.h  GlCubemap.h  GlObject.h  GlRenderable.h  GlSkybox.h  GlText.h  GlTransform.h  GlViewport.h  Light.h  Memory.h  Quaternion.h  Sequence.h  ShadowMap.cpp  ShadowMap.h  StringLiteral.h  Texture.cpp  Texture.h  Timer.h  background_renderer.cpp  background_renderer.h  customAssert.h  glPrimitives.h  glUtil.h  jniTeapot.cpp  log.cpp  log.h  macros.h  mat.h  mathUtil.h  memUtil.h  metaprogrammingUtil.h  (+12 more)
JniTeapot/app/src/main/cpp/FreeType2.9/builds/unix/: aclocal.m4  ltmain.sh
JniTeapot/app/src/main/cpp/FreeType2.9/include/freetype/: fttypes.h
JniTeapot/app/src/main/cpp/FreeType2.9/include/freetype/internal/: ftobjs.h
JniTeapot/app/src/main/cpp/FreeType2.9/src/autofit/: afhints.c
JniTeapot/app/src/main/cpp/FreeType2.9/src/base/: ftobjs.c  ftoutln.c
JniTeapot/app/src/main/cpp/FreeType2.9/src/cff/: cffload.c
JniTeapot/app/src/main/cpp/FreeType2.9/src/psaux/: psstack.c
JniTeapot/app/src/main/java/com/eecs487/jniteapot/: App.java  JniTeapotActivity.java  JniTeapotApplication.java
JniTeapot/app/src/main/res/values/: strings.xml
JniTeapot/gradle/wrapper/: gradle-wrapper.properties
JniTeapot/virtualRoom/: room.blend  room.blend1
JniTeapot/vscode/: resources.pak
JniTeapot/vscode/data/extensions/adelphes.android-dev-ext-1.3.2/: .vsixmanifest  package.json
JniTeapot/vscode/data/extensions/dannark.androidlauncher-0.0.7/: package.json
JniTeapot/vscode/data/extensions/jniteapot-cpp/: CHANGELOG.md  README.md  package.json  vsc-extension-quickstart.md
JniTeapot/vscode/data/extensions/jniteapot-cpp/syntaxes/: jniteapot-cpp.comment.json  jniteapot-cpp.json
JniTeapot/vscode/data/extensions/ms-vscode.cpptools-1.6.0/: CHANGELOG.md  package.json
JniTeapot/vscode/data/extensions/raidxu.logcat-color-0.0.1/: README.md
JniTeapot/vscode/data/extensions/raidxu.logcat-color-0.0.1/syntaxes/: logcat.tmLanguage.json
JniTeapot/vscode/data/extensions/rssowl.close-all-1.0.5/: .vsixmanifest  README.md  package.json
JniTeapot/vscode/data/extensions/ryuta46.multi-command-1.5.1/: package.json
JniTeapot/vscode/data/extensions/sleistner.vscode-fileutils-3.4.5/: .vsixmanifest  package.json
JniTeapot/vscode/data/extensions/slevesque.shader-1.1.5/: package.json
JniTeapot/vscode/data/extensions/surajbarkale.ninja-0.0.1/: .vsixmanifest  package.json
JniTeapot/vscode/data/extensions/twxs.cmake-0.0.17/: package.json
JniTeapot/vscode/data/extensions/visualstudioexptteam.vscodeintellicode-1.2.14/: package.json
JniTeapot/vscode/data/extensions/visualstudioexptteam.vscodeintellicode-1.2.14/cache/: models.json
JniTeapot/vscode/locales/: am.pak  ar.pak  bg.pak  bn.pak  ca.pak  cs.pak  da.pak  de.pak  el.pak  en-GB.pak  en-US.pak  es-419.pak  es.pak  et.pak  fa.pak  fi.pak  fil.pak  fr.pak  gu.pak  he.pak  hi.pak  hr.pak  hu.pak  id.pak  it.pak  ja.pak  kn.pak  ko.pak  lt.pak  lv.pak  ml.pak  mr.pak  ms.pak  nb.pak  nl.pak  pl.pak  pt-BR.pak  pt-PT.pak  ro.pak  ru.pak  (+13 more)
JniTeapot/vscode/resources/app/: ThirdPartyNotices.txt  package.json  product.json  telemetry-core.json  telemetry-extensions.json
JniTeapot/vscode/resources/app/node_modules.asar.unpacked/node-pty/lib/shared/: conout.js
JniTeapot/vscode/resources/app/node_modules.asar.unpacked/node-pty/lib/worker/: conoutSocketWorker.js
Lab0/: .gitignore  settings.gradle
Lab0/app/: build.gradle
Lab0/app/src/main/: AndroidManifest.xml
Lab0/app/src/main/java/com/eecs487/lab0/: Lab0Renderer.java  Lab0View.java  MainActivity.java
Lab0/app/src/main/res/drawable-v24/: ic_launcher_foreground.xml
Lab0/app/src/main/res/layout/: button_layout.xml
Lab0/app/src/main/res/values/: strings.xml
